k8s/ingress/api.steve-bang.com-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-steve-bang-com-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: api.steve-bang.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name:  apigateway-service
            port:
              number: 8080
